--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
       metadataSelector: ".media-context-metadata",
       metadataContext: {
         json: {
-          path: "/context/metadata.json"
+          path: "context/metadata.json"
         },
         /*manual: [
           { content: "<h2>This is a manual context</h2>", time: 12 } // Override context metadata json at 12 seconds
