--- a/index.html
+++ b/index.html
@@ -63,13 +63,20 @@
       mediaSelector: ".media-context",
       backgroundSelector: ".media-context-background",
       backgroundContext: {
-        folder: {
+        /*folder: {
           path: "backgrounds/",
           pattern: "bg-%.jpg"
-        },
-        /*manual: [
-          { src: "backgrounds/bg-lol.png", time: 12 } // Overrige background at 12 seconds
-        ]*/
+        },*/
+        manual: [
+          { src: "backgrounds/bg-0.png", time: 0 },
+          { src: "backgrounds/bg-6.png", time: 6 },
+          { src: "backgrounds/bg-29.png", time: 29 },
+          { src: "backgrounds/bg-34.png", time: 34 },
+          { src: "backgrounds/bg-39.png", time: 39 },
+          { src: "backgrounds/bg-43.png", time: 43 },
+          { src: "backgrounds/bg-46.png", time: 46 },
+          { src: "backgrounds/bg-52.png", time: 52 },
+        ]
       },
       metadataSelector: ".media-context-metadata",
       metadataContext: {
