--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
       <video class="center media-context" controls="controls" poster="https://i.ytimg.com/vi/YAaYvXdDRw8/maxresdefault.jpg" src="planetearth.mp4" height="282" width="500"></video>
       <div class="media-context-metadata"></div>
   </body>
-  <script type="text/javascript" src="mediacontext.min.js"></script>
+  <script type="text/javascript" src="mediacontext.js"></script>
   <script>
     MediaContext({
       mediaSelector: ".media-context",
@@ -68,14 +68,14 @@
           pattern: "bg-%.jpg"
         },*/
         manual: [
-          { src: "backgrounds/bg-0.png", time: 0 },
-          { src: "backgrounds/bg-6.png", time: 6 },
-          { src: "backgrounds/bg-29.png", time: 29 },
-          { src: "backgrounds/bg-34.png", time: 34 },
-          { src: "backgrounds/bg-39.png", time: 39 },
-          { src: "backgrounds/bg-43.png", time: 43 },
-          { src: "backgrounds/bg-46.png", time: 46 },
-          { src: "backgrounds/bg-52.png", time: 52 },
+          { src: "backgrounds/bg-0.jpg", time: 0 },
+          { src: "backgrounds/bg-6.jpg", time: 6 },
+          { src: "backgrounds/bg-29.jpg", time: 29 },
+          { src: "backgrounds/bg-34.jpg", time: 34 },
+          { src: "backgrounds/bg-39.jpg", time: 39 },
+          { src: "backgrounds/bg-43.jpg", time: 43 },
+          { src: "backgrounds/bg-46.jpg", time: 46 },
+          { src: "backgrounds/bg-52.jpg", time: 52 },
         ]
       },
       metadataSelector: ".media-context-metadata",
