--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
         },
         manual: [
           { src: "backgrounds/bg-46.jpg", time: 46 },
-          { src: "backgrounds/bg-52.jpg", time: 52 },
+          { src: "backgrounds/bg-52.jpg", time: 52 }
         ]
       },
       metadataSelector: ".media-context-metadata",
