--- a/index.html
+++ b/index.html
@@ -76,9 +76,7 @@
         json: {
           path: "context/metadata.json"
         },
-        manual: [
-          { content: "<h2>This is a manual context</h2>", time: 12 }
-        ]
+        manual: []
       }
     });
   </script>
